--- a/informatica.html
+++ b/informatica.html
@@ -32,7 +32,7 @@
 					<p>
 						 Muito prazer!  Sou Willian, um profissional de TI apaixonado por tecnologia e literaturas. Minha paixão por essas áreas me impulsiona a buscar conhecimento, história e inovação, qualidades que me diferenciam como profissional e como pessoa. <br><br>
 		
-						Atuo na área de manutenção de computadores, tanto desktops quanto notebooks, e possuo experiência nesse ramo. Minhas habilidades técnicas me destacam no mercado de trabalho e me permitem oferecer soluções eficientes para meus clientes.<br><br>
+						Atuo na área de manutenção de computadores, tanto desktops quanto notebooks, e possuo experiência nesse ramo. Obtenho expertise em  redes de computadores e cybersegurança tendo como príncipios as ISO/IEC 27001 e ISO/IEC 9001. Minhas habilidades técnicas me destacam no mercado de trabalho e me permitem oferecer soluções eficientes para meus clientes.<br><br>
 		
 					</p>
 		
@@ -42,7 +42,7 @@
 					<img src=" imagens/willian.jpeg" alt="linkedin.com/in/willian-florencio-calixto-240429324" srcset="" id="eu">
 		
 		
-						<a  href="www.linkedin.com/in/willian-florencio-calixto-240429324"><img src="imagens/linkedinicon1.png   " alt="linkedin" class="contato"></a>
+						<a 	 href="www.linkedin.com/in/willian-florencio-calixto-240429324"><img src="imagens/linkedinicon1.png   " alt="linkedin" class="contato"></a>
 						<a   href="https://github.com/EnginnerWillian"><img src="imagens/placa-do-github.png" alt="github" class="contato"></a>
 						<a  href="#"><img src="imagens/whatsappicon.png" class="contato"></a>
 		
@@ -51,12 +51,13 @@
 		
 		</div>
 	</div>
-	
-		<div id="rodape">
-			Todos os direitos reservados
+	<footer>
+		<div>
+				<h1>Certificados</h1>
+				<img src="Imagens/certificados/verified_cybersecurity.png" alt="" srcset="">
+				<img src="Imagens/certificados/image.png" alt="" srcset="">
 		</div>
-
-	</div>
+	</footer>
 
 </body>
 </html>
