--- a/Sobre-mim.html
+++ b/Sobre-mim.html
@@ -15,8 +15,8 @@
 		<div id="area-menu">
 			<a href="index.html">Home</a>
 			<a href="jogos.html">Jogos</a>
-			<a href="celulares.html">Celulares</a>
-			<a href="informatica.html">Informática</a>
+			<a href="Manutenção.html">Manutenção</a>
+			<a href="Sobre-mim.html">Sobre mim</a>
 			<a href="eletronicos.html">Eletrônicos</a>
 		</div>
 
