fazendo alteração nas postagem e links

--- a/Sobre-mim.html
+++ b/Sobre-mim.html
@@ -14,10 +14,10 @@
 		</div>
 		<div id="area-menu">
 			<a href="index.html">Home</a>
-			<a href="jogos.html">Jogos</a>
-			<a href="Manutenção.html">Manutenção</a>
+			<a href="Contato.html">Contato</a>
+			<a href="Manutenção.html">Manutenção e Suporte</a>
 			<a href="Sobre-mim.html">Sobre mim</a>
-			<a href="eletronicos.html">Eletrônicos</a>
+			<a href="projetos.html">Projetos</a>
 		</div>
 
 	</div>
@@ -51,6 +51,8 @@
 		
 		</div>
 	</div>
+	
+	
 	<footer>
 		<div>
 				<h1>Certificados</h1>
