--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 			<div class="postagem">
 				<h2>🌐 Internet ou Inter-Network</h2>
 				<span class="data-postagem">postado 01 de Janeiro de 2025</span>
-				<p>
+				<p class="mostrar">
 
-					Internet que é comumente usada nos dias atuais é a forma mais usada de obter informações. Um projeto desenvolvido nos primórdios da década de 60, na famosa Guerra Fria entre as potências mundiais Estados Unidos e a antiga União Soviética (comunistas)<span id="pontos">...</span><span id="mais" style="display: none;">
-					Desenvolvida após o lançamento do foguete soviético Sputnik, começou a ser criar por uma universidade da Califórnia e pelas forças armadas americana, um projeto de comunicação de computadores mainframes (computadores que pesavam uma tonelada e ocupavam uma sala),que na época era chamado de ARPA(Advanced Research Projects Agency). A intenção era centralizar as informações em pontos estratégicos, que mesmo se uma das bases sofresse um ataque, conseguiriam manter as informações. Usando cabos de fibra óptica para fazer essa comunicação de dados, foi enviada a primeira mensagem entre a universidade e a base americana. Uma curiosidade é que, na época, a primeira mensagem não conseguiu ser completada por causa de um erro no sistema em 1969.
-				   Um ano mais tarde, foi criado uma topologia de comugnicação utilizado até os dias atuais chamado TCP/IP, por dois cientistas, Vinton Cerf e Roberto Kahan. <br><br>
+				Internet que é comumente usada nos dias atuais é a forma mais usada de obter informações. Um projeto desenvolvido nos primórdios da década de 60, na famosa Guerra Fria entre as potências mundiais Estados Unidos e a antiga União Soviética (comunistas)<span id="pontos">...</span><span id="mais" style="display:none;">
+				Desenvolvida após o lançamento do foguete soviético Sputnik, começou a ser criar por uma universidade da Califórnia e pelas forças armadas americana, um projeto de comunicação de computadores mainframes (computadores que pesavam uma tonelada e ocupavam uma sala),que na época era chamado de ARPA(Advanced Research Projects Agency). A intenção era centralizar as informações em pontos estratégicos, que mesmo se uma das bases sofresse um ataque, conseguiriam manter as informações. Usando cabos de fibra óptica para fazer essa comunicação de dados, foi enviada a primeira mensagem entre a universidade e a base americana. Uma curiosidade é que, na época, a primeira mensagem não conseguiu ser completada por causa de um erro no sistema em 1969.
+				Um ano mais tarde, foi criado uma topologia de comugnicação utilizado até os dias atuais chamado TCP/IP, por dois cientistas, Vinton Cerf e Roberto Kahan. <br><br>
 				   
 				   Modelo TCP/IP
 				   O modelo de TCP/IP é uma arquitetura padronizada pela IETF (Internet Engineering Task Force), que visa estabelecer e projetar uma rede. O TCP/IP possui quatro camadas que garantem a entrega e o envio de dados. São elas:<br><br>
@@ -60,7 +60,7 @@
 				<h2>Defesa de rede </h2>
 				<span class="data-postagem">postado 08 Maio 2025</span>
 				<img width="620px" src="imagens/imagem2.jpg">
-					<h3 class="postagem-h3"> Broken Acess Control</h3>
+					<h3 class="postagem-h3">Broken Acess Control</h3>
 						<p>
 										Segundo a WOASP  a quinta maior falha de segurança em 2021 foi  o Broken Acesso Control. Que com acesso não autorizado de maneiras  maliciosa pode acabar obtendo acesso a dados de críticidade média/alta. Pode causar danos através de meios como: acessar um terminado dado por uma url de um computador paralelo com ip e navegador diferentes, ter um id de uma sessão clonado ou alterado.
 
@@ -84,9 +84,16 @@ Usar duplos cookies, e usar princípios de gerenciamento de configurações como
 				<h3>Postagens recentes</h3>
 				
 				<div class="postagem-lateral">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-					<button style="background-color: #FFF; border: none; " onclick="mostrarMais()">Leia mais</button>
-				</div>
+					<p>
+						<h4>MU-MIMO</h4>
+						Funciona com capacidade de transmitir mais de quadro ao mesmo tempo ao endpoint<span id="pontos">...</span><span id="mais" style="display: none;"></span>
+						Podendo ser transmitido com essa capacidade a partir de que o estação que envia a conectividade tenha mais de uma antena para a propagação do sinal. 
+						O MU-MIMO tem compatibilidade com os padrões 802.11ac  WI-FI 5(WAVE 2 só que não são todos os dispositivos que fornecem compatibilidade com essa tecnologia), 802.11ax WI-FI 6.
+			  <h4>OFDMA</h4>
+				  Ortagonal Fraquency Division Multiple Acess (OFDMA) Segundo o livro do Gabriel Torres é ao contrário das outras tecnologias e possui subcanais onde se concentra a transmissão em um só cliente      		  
+			  </p>
+			  <button style="background-color: #FFF; border: none; " onclick="showPlus()"><a href="index1.html">Leia mais</a></button>
+			</div>
 
 				<div class="postagem-lateral" style="border-bottom: none;">
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
