--- a/index.html
+++ b/index.html
@@ -102,27 +102,28 @@ Usar duplos cookies, e usar princípios de gerenciamento de configurações como
 
 			</div>
 
-			<div class="conteudo-lateral">
-				<h3>Categorias</h3>
-				
-				<a href="index.html">Home</a><br>
-				<a href="Contato.html">Contato</a><br>
-				<a href="Manutencao">Manutenção e Suporte</a><br>
-				<a href="Sobre-mim.html">Sobre-mim</a><br>
-				<a href="Websites">Projetos </a><br>
 
-			</div>
-
-
-		</div>
-
-		<div id="rodape">
-			Todos os direitos reservados
-		</div>
+	
 
 	</div>
 
 </body>
+
+<footer>
+	
+<div id="rodape">
+	
+	
+		<a href="index.html">Home</a><br>
+		<a href="Contato.html">Contato</a><br>
+		<a href="Manutencao">Manutenção e Suporte</a><br>
+		<a href="Sobre-mim.html">Sobre-mim</a><br>
+		<a href="Websites">Projetos </a><br>	
+	</div>
+</footer>
+
+
+</div>
 <script>
 	function mostrarMais(botao) {
 		const postagem = botao.closest('.postagem');
