--- a/projetos.html
+++ b/projetos.html
@@ -39,8 +39,8 @@
 			
 
         <div class="conteudo-lateral">
-            <h3>Projetos</h3>
-            
+            <h3>Projetos portifólio para modelos</h3>
+            <a href="Projeto-Ana-Julia/campanhas.html"> <img style="width:210px;padding-top:20px;" src="Imagens/Captura de Tela 2025-05-10 às 20.05.17.png"></img></a>
             <div class="postagem-lateral">
                
         </div>
