--- a/Sobre-mim.html
+++ b/Sobre-mim.html
@@ -54,6 +54,16 @@
 	
 	
 	<footer>
+
+		<div id="rodape">
+        
+        
+            <a href="index.html">Home</a><br>
+            <a href="Contato.html">Contato</a><br>
+            <a href="Manutencao">Manutenção e Suporte</a><br>
+            <a href="Sobre-mim.html">Sobre-mim</a><br>
+            <a href="Websites">Projetos </a><br>	
+        </div>
 		<div>
 				<h1>Certificados</h1>
 				<img src="Imagens/certificados/verified_cybersecurity.png" alt="" srcset="">
