--- a/index1.html
+++ b/index1.html
@@ -40,8 +40,10 @@
               Ortagonal Fraquency Division Multiple Acess (OFDMA) Segundo o livro do Gabriel Torres é ao contrário das outras tecnologias e possui subcanais onde se concentra a transmissão em um só cliente.
                    		  
           </p>
-				</div><!--// fechamento postagem -->
+		  <br>
+		  <h5>Referências: Livro Redes Wi-fi | Autor: Gabriel Torres</h5>
 
+				</div><!--// fechamento postagem -->
 			<!-- abertura postagem -->
 			<div class="postagem">
 				<h2>Defesa de rede </h2>
@@ -61,6 +63,8 @@ Um dos modos de está em conformidade com segurança é: <ul><br>
 Ignorar verificações de controle de acesso modificando a URL (violação de parâmetros ou navegação forçada), o estado interno do aplicativo ou a página HTML, ou usando uma ferramenta de ataque modificando solicitações de API.
 Usar duplos cookies, e usar princípios de gerenciamento de configurações como .net, automação CI/CD entre outros. 
 </p><br>
+<h5>Referências:<a href="www.WOASP.com"> www.WOASP.com</a> </h5>
+
 			</div><!--// fechamento postagem -->
 
 		</div>
