add modificações na nav bar

--- a/Sobre-mim.html
+++ b/Sobre-mim.html
@@ -1,3 +1,10 @@
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,25 +14,27 @@
 </head>
 <body>
 
-	<div id="area-cabecalho">
-		
-		<div id="area-logo">
-			<h1><span class="branco">WNTech  Blog</span></h1>
-		</div>
-		<div id="area-menu">
-			<a href="index.html">Home</a>
-			<a href="Contato.html">Contato</a>
-			<a href="Manutenção.html">Manutenção e Suporte</a>
-			<a href="Sobre-mim.html">Sobre mim</a>
-			<a href="projetos.html">Projetos</a>
-		</div>
+	<header id="area-cabecalho">
+		<nav>
 
-	</div>
+			<div id="area-logo">
+				<img src="	" alt="">
+				<h1><span class="branco">WNTech  Blog</span></h1>
+			</div>
+			<div id="area-menu">
+				<a href="index.html">Home</a>
+				<a href="Contato.html">Contato</a>
+				<a href="Manutenção.html">Manutenção e Suporte</a>
+				<a href="Sobre-mim.html">Sobre Mim</a>
+				<a href="Projetos.html">Projetos WebSites</a>
+			</div>
+		</nav>
 
+	</header>
 	<div id="area-principal">
 
 		<div id="fundo">
-    
+
 			<div id="sobre-mim">
 				<h1>Sobre mim</h1>
 				<div class="conteudo">
@@ -64,12 +73,5 @@
             <a href="Sobre-mim.html">Sobre-mim</a><br>
             <a href="Websites">Projetos </a><br>	
         </div>
-		<div>
-				<h1>Certificados</h1>
-				<img src="Imagens/certificados/verified_cybersecurity.png" alt="" srcset="">
-				<img src="Imagens/certificados/image.png" alt="" srcset="">
-		</div>
-	</footer>
-
 </body>
 </html>
