--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
 	<link rel="" href="Control/control.js">
 </head>
 <body>
-
 	<header id="area-cabecalho">
 		<nav>
-
-		<div id="area-logo">
-			<img src="	" alt="">
-			<h1><span class="branco">WNTech  Blog</span></h1>
-		</div>
+			<div id="area-logo">
+				<img src="	" alt="">
+				<h1><span class="branco">WNTech </span></h1>
+			</div>
 			<div id="area-menu">
 				<a href="index.html">Home</a>
 				<a href="Contato.html">Contato</a>
 				<a href="Manutenção.html">Manutenção e Suporte</a>
 				<a href="Sobre-mim.html">Sobre Mim</a>
 				<a href="Projetos.html">Projetos WebSites</a>
-			</div>
-		</nav>
+										</div>
+		</nav>																				   
 
 	</header>
-
+	
 	<section id="area-principal">
 
 		<div id="area-postagens">
 			
 			<!-- abertura postagem -->
-			<article id="internet">
+			<article id="article-internet">
 				<div class="postagem">
 					<h2>🌐 Internet ou Inter-Network</h2>
 					<span class="data-postagem">postado 01 de Janeiro de 2025</span>
@@ -58,13 +56,12 @@
 
 				</div><!--// fechamento postagem -->		
 			<!-- abertura postagem -->
-			<article id="defesa-de-rede">
+			<article id="article-defesa-de-rede">
 				<div class="postagem">
 					<h2 >Defesa de rede </h2>
 					<span class="data-postagem">postado 08 Maio 2025</span>
 					<img width="620px" src="imagens/imagem2.jpg">
-						<h3 class="postagem-h3">Broken Acess Control</h3>
-							<p>
+						<h3 class="postagem-h3">Broken Acess Control</h3><p>
 											Segundo a WOASP  a quinta maior falha de segurança em 2021 foi  o Broken Acesso Control. Que com acesso não autorizado de maneiras  maliciosa pode acabar obtendo acesso a dados de críticidade média/alta. Pode causar danos através de meios como: acessar um terminado dado por uma url de um computador paralelo com ip e navegador diferentes, ter um id de uma sessão clonado ou alterado.
 				
 				Um dos modos de está em conformidade com segurança é: <ul><br>
