add modificações js e css

--- a/Contato.html
+++ b/Contato.html
@@ -1,28 +1,41 @@
+
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WNTecBlog - O seu Blog de tecnologia</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WNTech</title>
+    <link rel="stylesheet" href="/Control/fiveserver.config.js">
     <link rel="stylesheet" href="/template/style4.css">
 </head>
 <body>
 
-    <div id="area-cabecalho">
-		
-		<div id="area-logo">
-			<img src="	" alt="">
-			<h1><span class="branco">WNTech  Blog</span></h1>
-		</div>
-		<div id="area-menu">
-			<a href="index.html">Home</a>
-			<a href="Contato.html">Contato</a>
-			<a href="Manutenção.html">Manutenção e Suporte</a>
-			<a href="Sobre-mim.html">Sobre Mim</a>
-			<a href="Projetos.html">Projetos WebSites</a>
-		</div>
+    <header id="area-cabecalho">
 
-	</div>
+		<nav>
+            <div id="area-logo">
+                <img src="	" alt="">
+                <h1><span class="branco">WNTech</span></h1>
+            </div>
+            <div id="area-menu">
+                <a href="index.html">Home</a>
+                <a href="Contato.html">Contato</a>
+                <a href="Sobre-mim.html">Sobre Mim</a>
+                <a href="Projetos.html">Projetos WebSites</a>
+            </div>
+        </nav>
+
+	</header>
     <hr >
 
     <section class="form-container">
