--- a/Sobre-mim.html
+++ b/Sobre-mim.html
@@ -8,7 +8,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WNTECHBlog</title>
+	<title>WNTECH</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="template/style2.css">
 </head>
@@ -19,12 +19,11 @@
 
 			<div id="area-logo">
 				<img src="	" alt="">
-				<h1><span class="branco">WNTech  Blog</span></h1>
+				<h1><span class="branco">WNTech</span></h1>
 			</div>
 			<div id="area-menu">
 				<a href="index.html">Home</a>
 				<a href="Contato.html">Contato</a>
-				<a href="Manutenção.html">Manutenção e Suporte</a>
 				<a href="Sobre-mim.html">Sobre Mim</a>
 				<a href="Projetos.html">Projetos WebSites</a>
 			</div>
@@ -69,7 +68,6 @@
         
             <a href="index.html">Home</a><br>
             <a href="Contato.html">Contato</a><br>
-            <a href="Manutencao">Manutenção e Suporte</a><br>
             <a href="Sobre-mim.html">Sobre-mim</a><br>
             <a href="Websites">Projetos </a><br>	
         </div>
