--- a/index1.html
+++ b/index1.html
@@ -1,28 +1,52 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
+
+
+
+
+
+
+
+
 <html lang="pt-br">
+	
 <head>
-	<title>WNTecBlog - O seu Blog de tecnologia <img src="" alt=""></title>
+	<title>WNTec - O seu Blog de tecnologia <img src="" alt=""></title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="template/style.css">
 	<link rel="stylesheet" href="Control/control.js">
 </head>
 <body>
 
-	<div id="area-cabecalho">
+	<header id="area-cabecalho">
 		
-		<div id="area-logo">
-			<img src="	" alt="">
-			<h1><span class="branco">WNTech  Blog</span></h1>
-		</div>
-		<div id="area-menu">
-			<a href="index.html">Home</a>
-			<a href="Contato.html">Contato</a>
-			<a href="Manutenção.html">Manutenção e Suporte</a>
-			<a href="Sobre-mim.html">Sobre Mim</a>
-			<a href="Projetos.html">Projetos WebSites</a>
-		</div>
+		<nav>
+			<div id="area-logo">
+				<img src="	" alt="">
+				<h1><span class="branco">WNTech</span></h1>
+			</div>
+			<div id="area-menu">
+				<a href="index.html">Home</a>
+				<a href="Contato.html">Contato</a>
+				<a href="Sobre-mim.html">Sobre Mim</a>
+				<a href="Projetos.html">Projetos WebSites</a>
+			</div>
+		</nav>	
 
-	</div>
+	</header>
 
 	<div id="area-principal">
 
@@ -41,7 +65,7 @@
                    		  
           </p>
 		  <br>
-		  <h5>Referências: Livro Redes Wi-fi | Autor: Gabriel Torres</h5>
+		  <h5><a href="clubedohardware.com.br/livros/disponiveis/redes-2ª-edição-r27/">Referências: Livro Redes Wi-fi | Autor: Gabriel Torres</a></h5>
 
 				</div><!--// fechamento postagem -->
 			<!-- abertura postagem -->
@@ -49,7 +73,7 @@
 				<h2>Defesa de rede </h2>
 				<span class="data-postagem">postado 08 Maio 2025</span>
 				<img width="620px" src="imagens/imagem2.jpg">
-					<h3 class="postagem-h3"> Broken Acess Control</h3>
+					<h3 class="postagem-h3">Broken Acess Control</h3>
 						<p>
 										Segundo a WOASP  a quinta maior falha de segurança em 2021 foi  o Broken Acesso Control. Que com acesso não autorizado de maneiras  maliciosa pode acabar obtendo acesso a dados de críticidade média/alta. Pode causar danos através de meios como: acessar um terminado dado por uma url de um computador paralelo com ip e navegador diferentes, ter um id de uma sessão clonado ou alterado.
 
@@ -95,7 +119,6 @@ Usar duplos cookies, e usar princípios de gerenciamento de configurações como
 				
 				<a href="index.html">Home</a><br>
 				<a href="Contato.html">Contato</a><br>
-				<a href="Manutencao">Manutenção e Suporte</a><br>
 				<a href="Sobre-mim.html">Sobre-mim</a><br>
 				<a href="Websites">Projetos WebSites</a><br>
 
@@ -131,4 +154,16 @@ Usar duplos cookies, e usar princípios de gerenciamento de configurações como
     </script>
 
 </body>
+<footer>
+	
+	<div id="rodape">
+		
+		
+			<a href="index.html">Home</a><br>
+			<a href="Contato.html">Contato</a><br>
+			<a href="Manutencao">Manutenção e Suporte</a><br>
+			<a href="Sobre-mim.html">Sobre-mim</a><br>
+			<a href="Websites">Projetos </a><br>	
+		</div>
+	</footer>
 </html>
