--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
+
+
+
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<title>WNTecBlog - O seu Blog de tecnologia <img src="" alt=""></title>
+	<title>WNTec <img src="" alt=""></title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="template/style.css">
 	<link rel="" href="Control/control.js">
@@ -16,7 +24,6 @@
 			<div id="area-menu">
 				<a href="index.html">Home</a>
 				<a href="Contato.html">Contato</a>
-				<a href="Manutenção.html">Manutenção e Suporte</a>
 				<a href="Sobre-mim.html">Sobre Mim</a>
 				<a href="Projetos.html">Projetos WebSites</a>
 										</div>
@@ -116,7 +123,6 @@
 	
 		<a href="index.html">Home</a><br>
 		<a href="Contato.html">Contato</a><br>
-		<a href="Manutencao">Manutenção e Suporte</a><br>
 		<a href="Sobre-mim.html">Sobre-mim</a><br>
 		<a href="Websites">Projetos </a><br>	
 	</div>
