add layout do formulário

--- a/Contato.html
+++ b/Contato.html
@@ -30,7 +30,7 @@
             <div id="area-menu">
                 <a href="index.html">Home</a>
                 <a href="Contato.html">Contato</a>
-                <a href="Sobre-mim.html">Sobre Mim</a>
+                <a   href="Sobre-mim.html">Sobre Mim</a>
                 <a href="Projetos.html">Projetos WebSites</a>
             </div>
         </nav>
@@ -58,9 +58,12 @@
                     <label for="telefone">Seu Telefone</label>
                 </div>
                 <hr>
-                <div class="input-single">
-                    <input type="text" class="input" id="mensagem"  name="mensagem" autocomplete="off">
+
+                <div class="input-sigle">   
+                    
+                    <textarea name="mensage" id="mensagem" cols="30" rows="10"></textarea>
                 </div>
+     
                 <div class="btn"><input type="submit" value="Enviar"></div>
             </form>
         </div>
