--- a/Contato.html
+++ b/Contato.html
@@ -31,7 +31,7 @@
                 <a href="index.html">Home</a>
                 <a href="Contato.html">Contato</a>
                 <a   href="Sobre-mim.html">Sobre Mim</a>
-                <a href="Projetos.html">Projetos WebSites</a>
+                <a href="Projetos.html">Projetos</a>
             </div>
         </nav>
 
@@ -42,6 +42,7 @@
         <div class="container">
             <form method="post" action="Document/index.php">
                 <h1>Entre em contato</h1>
+                <img src="../Projeto-tech/50.#projeto TecBlog - parte 2/imagens/imagem3.jpg" alt="" class="logown">
                 <p>Preencha o formulário abaixo e entraremos em contato com você.</p>
                 <div class="input-single">
                     <input type="text" class="input" id="nome" name="nome" required autocomplete="off">
@@ -60,7 +61,7 @@
                 <hr>
 
                 <div class="input-sigle">   
-                    
+                   <legend>Digite o assunto:</legend> 
                     <textarea name="mensage" id="mensagem" cols="30" rows="10"></textarea>
                 </div>
      
